<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.j-util</groupId>
    <artifactId>performance-lab</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>j-util Performance Lab</name>
    <description>Reproducible benchmarks and performance experiments for j-util libraries.</description>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>benchmark-core</module>
        <module>benchmark-jmh</module>
    </modules>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <jmh.version>1.37</jmh.version>
        <junit.version>5.14.3</junit.version>
        <fastutil.version>8.5.19</fastutil.version>
        <eclipse-collections.version>13.0.0</eclipse-collections.version>
        <tablesaw.version>0.44.4</tablesaw.version>
        <dflib.version>1.3.0</dflib.version>
        <hppc.version>0.10.0</hppc.version>
        <chronicle.bom.version>2026.22</chronicle.bom.version>
        <arrow.version>19.0.0</arrow.version>

        <maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
        <maven.shade.plugin.version>3.6.2</maven.shade.plugin.version>
        <maven.surefire.plugin.version>3.5.5</maven.surefire.plugin.version>
        <inputstream-processor-core.version>1.0.0</inputstream-processor-core.version>
        <parallel-range-processor.version>1.0.0</parallel-range-processor.version>
        <splice-list.version>2.0.0</splice-list.version>
        <commons-csv.version>1.14.1</commons-csv.version>
        <columnar-projection-store.version>1.3.0-SNAPSHOT</columnar-projection-store.version>
        <columnar-projection-store-hardwood.version>1.1.0-SNAPSHOT</columnar-projection-store-hardwood.version>
        <hardwood.version>1.1.0-SNAPSHOT</hardwood.version>
        <parquet.version>1.17.0</parquet.version>
        <hadoop.version>3.4.2</hadoop.version>
        <reduction-store.version>1.0.0</reduction-store.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>dev.hardwood</groupId>
                <artifactId>hardwood-core</artifactId>
                <version>${hardwood.version}</version>
            </dependency>

            <dependency>
                <groupId>net.openhft</groupId>
                <artifactId>chronicle-bom</artifactId>
                <version>${chronicle.bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.arrow</groupId>
                <artifactId>arrow-bom</artifactId>
                <version>${arrow.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <executions>
                        <execution>
                            <id>default-testCompile</id>
                            <configuration>
                                <proc>none</proc>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${maven.shade.plugin.version}</version>
                    <configuration>
                        <finalName>benchmarks</finalName>
                        <createDependencyReducedPom>false</createDependencyReducedPom>
                        <filters>
                            <filter>
                                <artifact>*:*</artifact>
                                <excludes>
                                    <exclude>META-INF/*.SF</exclude>
                                    <exclude>META-INF/*.DSA</exclude>
                                    <exclude>META-INF/*.RSA</exclude>
                                </excludes>
                            </filter>
                        </filters>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                <mainClass>org.openjdk.jmh.Main</mainClass>
                            </transformer>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                        </transformers>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
